# rsstygen

./: .editorconfig  Cargo.toml  README.md  rsstygen.sample.toml
src/: generator.rs  main.rs  uploader.rs
