[package]
name = "rsstygen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1.19", features = ["full"] }
fantoccini = "0.19"
colored = "2.0"
toml = "0.5"
rusqlite = { version = "0.27", features = ["bundled", "chrono"] }
chrono = "0.4"
chrono-tz = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
rss = "2.0"
ftp = { version = "3.0" }